--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     //内存泄露
     releaseCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
     compile 'com.android.support:recyclerview-v7:24.1.1'
+    compile project(':volley')
+    compile project(':utils')
 }
