--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.1.1'
     compile project(':volley')
     compile project(':utils')
+    compile project(':okhttp')
 }
